fix dark mode styling on modal

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,10 @@ body {
   background-color: antiquewhite;
 }
 
+.dark {
+  color: white;
+}
+
 
 @media (max-width: 800px) {
   .letterTile {
